# dson

./: .env  .gitignore  README.md  USAGE.md  pyproject.toml  show_prompts.py
benchmarks/: analyze_results.py  data_gen.py  run_bench.py
benchmarks/results/: README.md
examples/: README.md  langchain_example.py  llamaindex_example.py  pydantic_example.py
src/dson/: __init__.py  core.py  instructions.py  instructions_backup.py  parser.py
src/dson/adapters/: langchain.py  llamaindex.py
src/dson/cli/: migrate.py
tests/: test_core.py
