[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dson"
version = "0.1.0"
description = "DSON: Dense Sequence Object Notation - A token-efficient drop-in replacement for JSON in LLM workflows."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Gautam Mehra"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
keywords = ["dson", "json", "llm", "parsing", "token-optimization"]
urls = {
    "Homepage" = "https://github.com/ProfitWheel/dson",
    "Repository" = "https://github.com/ProfitWheel/dson",
    "Bug Tracker" = "https://github.com/ProfitWheel/dson/issues"
}
dependencies = [
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
llamaindex = ["llama-index>=0.10.0"]
benchmark = ["openai", "pandas", "tabulate", "python-dotenv"]
all = ["dson[langchain,llamaindex,benchmark]"]

[project.scripts]
dson-migrate = "dson.cli.migrate:main"

[tool.setuptools.packages.find]
where = ["src"]
